src/tk/oknctict/izanagi/parser/ExprParser.java
/* ExprParser.java */
/* Generated By:JJTree&JavaCC: Do not edit this line. ExprParser.java */
package tk.oknctict.izanagi.parser;
public class ExprParser/*@bgen(jjtree)*/implements ExprParserTreeConstants, ExprParserConstants {/*@bgen(jjtree)*/
  protected JJTExprParserState jjtree = new JJTExprParserState();

//文法の定義
  final public ASTStart Start() throws ParseException {
    trace_call("Start");
    try {/*@bgen(jjtree) Start */
  ASTStart jjtn000 = new ASTStart(JJTSTART);
  boolean jjtc000 = true;
  jjtree.openNodeScope(jjtn000);
      try {
        Stmts();
        jj_consume_token(0);
jjtree.closeNodeScope(jjtn000, true);
                        jjtc000 = false;
{if ("" != null) return jjtn000;}
      } catch (Throwable jjte000) {
if (jjtc000) {
            jjtree.clearNodeScope(jjtn000);
            jjtc000 = false;
          } else {
            jjtree.popNode();
          }
          if (jjte000 instanceof RuntimeException) {
            {if (true) throw (RuntimeException)jjte000;}
          }
          if (jjte000 instanceof ParseException) {
            {if (true) throw (ParseException)jjte000;}
          }
          {if (true) throw (Error)jjte000;}
      } finally {
if (jjtc000) {
            jjtree.closeNodeScope(jjtn000, true);
          }
      }
    throw new Error("Missing return statement in function");
    } finally {
      trace_return("Start");
    }
  }

  final public void Stmts() throws ParseException {
    trace_call("Stmts");
    try {/*@bgen(jjtree) Stmts */
  ASTStmts jjtn000 = new ASTStmts(JJTSTMTS);
  boolean jjtc000 = true;
  jjtree.openNodeScope(jjtn000);
      try {
        label_1:
        while (true) {
          Stmt();
          switch ((jj_ntk==-1)?jj_ntk_f():jj_ntk) {
          case FUNC:
          case IF:
          case WHILE:
          case SELECT:
          case DIM:
          case RETURN:
          case BREAK:
          case CONTINUE:
          case PRINT:
          case IDENTIFIER:{
            ;
            break;
            }
          default:
            jj_la1[0] = jj_gen;
            break label_1;
          }
        }
      } catch (Throwable jjte000) {
if (jjtc000) {
            jjtree.clearNodeScope(jjtn000);
            jjtc000 = false;
          } else {
            jjtree.popNode();
          }
          if (jjte000 instanceof RuntimeException) {
            {if (true) throw (RuntimeException)jjte000;}
          }
          if (jjte000 instanceof ParseException) {
            {if (true) throw (ParseException)jjte000;}
          }
          {if (true) throw (Error)jjte000;}
      } finally {
if (jjtc000) {
            jjtree.closeNodeScope(jjtn000, true);
          }
      }
    } finally {
      trace_return("Stmts");
    }
  }

  final public void Block() throws ParseException {
    trace_call("Block");
    try {/*@bgen(jjtree) Block */
  ASTBlock jjtn000 = new ASTBlock(JJTBLOCK);
  boolean jjtc000 = true;
  jjtree.openNodeScope(jjtn000);
      try {
        label_2:
        while (true) {
          Stmt();
          switch ((jj_ntk==-1)?jj_ntk_f():jj_ntk) {
          case FUNC:
          case IF:
          case WHILE:
          case SELECT:
          case DIM:
          case RETURN:
          case BREAK:
          case CONTINUE:
          case PRINT:
          case IDENTIFIER:{
            ;
            break;
            }
          default:
            jj_la1[1] = jj_gen;
            break label_2;
          }
        }
      } catch (Throwable jjte000) {
if (jjtc000) {
            jjtree.clearNodeScope(jjtn000);
            jjtc000 = false;
          } else {
            jjtree.popNode();
          }
          if (jjte000 instanceof RuntimeException) {
            {if (true) throw (RuntimeException)jjte000;}
          }
          if (jjte000 instanceof ParseException) {
            {if (true) throw (ParseException)jjte000;}
          }
          {if (true) throw (Error)jjte000;}
      } finally {
if (jjtc000) {
            jjtree.closeNodeScope(jjtn000, true);
          }
      }
    } finally {
      trace_return("Block");
    }
  }

  final public void WhileBlock() throws ParseException {
    trace_call("WhileBlock");
    try {/*@bgen(jjtree) WhileBlock */
  ASTWhileBlock jjtn000 = new ASTWhileBlock(JJTWHILEBLOCK);
  boolean jjtc000 = true;
  jjtree.openNodeScope(jjtn000);
      try {
        label_3:
        while (true) {
          Stmt();
          switch ((jj_ntk==-1)?jj_ntk_f():jj_ntk) {
          case FUNC:
          case IF:
          case WHILE:
          case SELECT:
          case DIM:
          case RETURN:
          case BREAK:
          case CONTINUE:
          case PRINT:
          case IDENTIFIER:{
            ;
            break;
            }
          default:
            jj_la1[2] = jj_gen;
            break label_3;
          }
        }
      } catch (Throwable jjte000) {
if (jjtc000) {
            jjtree.clearNodeScope(jjtn000);
            jjtc000 = false;
          } else {
            jjtree.popNode();
          }
          if (jjte000 instanceof RuntimeException) {
            {if (true) throw (RuntimeException)jjte000;}
          }
          if (jjte000 instanceof ParseException) {
            {if (true) throw (ParseException)jjte000;}
          }
          {if (true) throw (Error)jjte000;}
      } finally {
if (jjtc000) {
            jjtree.closeNodeScope(jjtn000, true);
          }
      }
    } finally {
      trace_return("WhileBlock");
    }
  }

  final public void FuncBlock() throws ParseException {
    trace_call("FuncBlock");
    try {/*@bgen(jjtree) FuncBlock */
  ASTFuncBlock jjtn000 = new ASTFuncBlock(JJTFUNCBLOCK);
  boolean jjtc000 = true;
  jjtree.openNodeScope(jjtn000);
      try {
        label_4:
        while (true) {
          Stmt();
          switch ((jj_ntk==-1)?jj_ntk_f():jj_ntk) {
          case FUNC:
          case IF:
          case WHILE:
          case SELECT:
          case DIM:
          case RETURN:
          case BREAK:
          case CONTINUE:
          case PRINT:
          case IDENTIFIER:{
            ;
            break;
            }
          default:
            jj_la1[3] = jj_gen;
            break label_4;
          }
        }
      } catch (Throwable jjte000) {
if (jjtc000) {
            jjtree.clearNodeScope(jjtn000);
            jjtc000 = false;
          } else {
            jjtree.popNode();
          }
          if (jjte000 instanceof RuntimeException) {
            {if (true) throw (RuntimeException)jjte000;}
          }
          if (jjte000 instanceof ParseException) {
            {if (true) throw (ParseException)jjte000;}
          }
          {if (true) throw (Error)jjte000;}
      } finally {
if (jjtc000) {
            jjtree.closeNodeScope(jjtn000, true);
          }
      }
    } finally {
      trace_return("FuncBlock");
    }
  }

  final public void Arguments() throws ParseException {
    trace_call("Arguments");
    try {/*@bgen(jjtree) Arguments */
  ASTArguments jjtn000 = new ASTArguments(JJTARGUMENTS);
  boolean jjtc000 = true;
  jjtree.openNodeScope(jjtn000);
      try {
        jj_consume_token(LPAREN);
        switch ((jj_ntk==-1)?jj_ntk_f():jj_ntk) {
        case RPAREN:{
          jj_consume_token(RPAREN);
          break;
          }
        case IDENTIFIER:{
          Argument();
          label_5:
          while (true) {
            switch ((jj_ntk==-1)?jj_ntk_f():jj_ntk) {
            case COMMA:{
              ;
              break;
              }
            default:
              jj_la1[4] = jj_gen;
              break label_5;
            }
            jj_consume_token(COMMA);
            Argument();
          }
          jj_consume_token(RPAREN);
          break;
          }
        default:
          jj_la1[5] = jj_gen;
          jj_consume_token(-1);
          throw new ParseException();
        }
      } catch (Throwable jjte000) {
if (jjtc000) {
            jjtree.clearNodeScope(jjtn000);
            jjtc000 = false;
          } else {
            jjtree.popNode();
          }
          if (jjte000 instanceof RuntimeException) {
            {if (true) throw (RuntimeException)jjte000;}
          }
          if (jjte000 instanceof ParseException) {
            {if (true) throw (ParseException)jjte000;}
          }
          {if (true) throw (Error)jjte000;}
      } finally {
if (jjtc000) {
            jjtree.closeNodeScope(jjtn000, true);
          }
      }
    } finally {
      trace_return("Arguments");
    }
  }

  final public void Argument() throws ParseException {
    trace_call("Argument");
    try {/*@bgen(jjtree) Argument */
  ASTArgument jjtn000 = new ASTArgument(JJTARGUMENT);
  boolean jjtc000 = true;
  jjtree.openNodeScope(jjtn000);Token t;
      try {
        Identifier();
        jj_consume_token(AS);
        t = jj_consume_token(TYPE);
jjtree.closeNodeScope(jjtn000, true);
                                       jjtc000 = false;
jjtn000.nodeValue = t.image;
      } catch (Throwable jjte000) {
if (jjtc000) {
            jjtree.clearNodeScope(jjtn000);
            jjtc000 = false;
          } else {
            jjtree.popNode();
          }
          if (jjte000 instanceof RuntimeException) {
            {if (true) throw (RuntimeException)jjte000;}
          }
          if (jjte000 instanceof ParseException) {
            {if (true) throw (ParseException)jjte000;}
          }
          {if (true) throw (Error)jjte000;}
      } finally {
if (jjtc000) {
            jjtree.closeNodeScope(jjtn000, true);
          }
      }
    } finally {
      trace_return("Argument");
    }
  }

  final public void Stmt() throws ParseException {
    trace_call("Stmt");
    try {/*@bgen(jjtree) Stmt */
  ASTStmt jjtn000 = new ASTStmt(JJTSTMT);
  boolean jjtc000 = true;
  jjtree.openNodeScope(jjtn000);
      try {
        switch ((jj_ntk==-1)?jj_ntk_f():jj_ntk) {
        case FUNC:{
          DefFunc();
          break;
          }
        case IF:{
          IfStmt();
          break;
          }
        case WHILE:{
          WhileStmt();
          break;
          }
        case SELECT:{
          SelectStmt();
          break;
          }
        case DIM:{
          DimStmt();
          break;
          }
        case BREAK:{
          BreakStmt();
          break;
          }
        case CONTINUE:{
          ContinueStmt();
          break;
          }
        case PRINT:{
          PrintStmt();
          break;
          }
        default:
          jj_la1[6] = jj_gen;
          if (jj_2_1(2)) {
            ReturnStmt();
          } else if (jj_2_2(2)) {
            CallFunc();
          } else if (jj_2_3(2)) {
            Expression();
          } else {
            jj_consume_token(-1);
            throw new ParseException();
          }
        }
      } catch (Throwable jjte000) {
if (jjtc000) {
                    jjtree.clearNodeScope(jjtn000);
                    jjtc000 = false;
                  } else {
                    jjtree.popNode();
                  }
                  if (jjte000 instanceof RuntimeException) {
                    {if (true) throw (RuntimeException)jjte000;}
                  }
                  if (jjte000 instanceof ParseException) {
                    {if (true) throw (ParseException)jjte000;}
                  }
                  {if (true) throw (Error)jjte000;}
      } finally {
if (jjtc000) {
                    jjtree.closeNodeScope(jjtn000, true);
                  }
      }
    } finally {
      trace_return("Stmt");
    }
  }

  final public void DefFunc() throws ParseException {
    trace_call("DefFunc");
    try {/*@bgen(jjtree) DefFunc */
  ASTDefFunc jjtn000 = new ASTDefFunc(JJTDEFFUNC);
  boolean jjtc000 = true;
  jjtree.openNodeScope(jjtn000);Token t;
      try {
        jj_consume_token(FUNC);
        FuncName();
        Arguments();
        jj_consume_token(AS);
        t = jj_consume_token(TYPE);
jjtn000.nodeValue = t.image;
        FuncBlock();
        jj_consume_token(ENDFUNC);
      } catch (Throwable jjte000) {
if (jjtc000) {
            jjtree.clearNodeScope(jjtn000);
            jjtc000 = false;
          } else {
            jjtree.popNode();
          }
          if (jjte000 instanceof RuntimeException) {
            {if (true) throw (RuntimeException)jjte000;}
          }
          if (jjte000 instanceof ParseException) {
            {if (true) throw (ParseException)jjte000;}
          }
          {if (true) throw (Error)jjte000;}
      } finally {
if (jjtc000) {
            jjtree.closeNodeScope(jjtn000, true);
          }
      }
    } finally {
      trace_return("DefFunc");
    }
  }

  final public void CallFunc() throws ParseException {
    trace_call("CallFunc");
    try {/*@bgen(jjtree) CallFunc */
  ASTCallFunc jjtn000 = new ASTCallFunc(JJTCALLFUNC);
  boolean jjtc000 = true;
  jjtree.openNodeScope(jjtn000);
      try {
        FuncName();
        jj_consume_token(LPAREN);
        switch ((jj_ntk==-1)?jj_ntk_f():jj_ntk) {
        case RPAREN:{
          jj_consume_token(RPAREN);
          break;
          }
        case MINUS:
        case LPAREN:
        case STR_START:
        case INTEGER:
        case FLOAT:
        case IDENTIFIER:{
          CompExpr();
          label_6:
          while (true) {
            switch ((jj_ntk==-1)?jj_ntk_f():jj_ntk) {
            case COMMA:{
              ;
              break;
              }
            default:
              jj_la1[7] = jj_gen;
              break label_6;
            }
            jj_consume_token(COMMA);
            CompExpr();
          }
          jj_consume_token(RPAREN);
          break;
          }
        default:
          jj_la1[8] = jj_gen;
          jj_consume_token(-1);
          throw new ParseException();
        }
      } catch (Throwable jjte000) {
if (jjtc000) {
            jjtree.clearNodeScope(jjtn000);
            jjtc000 = false;
          } else {
            jjtree.popNode();
          }
          if (jjte000 instanceof RuntimeException) {
            {if (true) throw (RuntimeException)jjte000;}
          }
          if (jjte000 instanceof ParseException) {
            {if (true) throw (ParseException)jjte000;}
          }
          {if (true) throw (Error)jjte000;}
      } finally {
if (jjtc000) {
            jjtree.closeNodeScope(jjtn000, true);
          }
      }
    } finally {
      trace_return("CallFunc");
    }
  }

  final public void IfStmt() throws ParseException {
    trace_call("IfStmt");
    try {/*@bgen(jjtree) IfStmt */
  ASTIfStmt jjtn000 = new ASTIfStmt(JJTIFSTMT);
  boolean jjtc000 = true;
  jjtree.openNodeScope(jjtn000);Token t;
      try {
        jj_consume_token(IF);
        jj_consume_token(LPAREN);
        CompExpr();
        jj_consume_token(RPAREN);
        jj_consume_token(THEN);
        Block();
        label_7:
        while (true) {
          switch ((jj_ntk==-1)?jj_ntk_f():jj_ntk) {
          case ELSEIF:{
            ;
            break;
            }
          default:
            jj_la1[9] = jj_gen;
            break label_7;
          }
          jj_consume_token(ELSEIF);
          jj_consume_token(LPAREN);
          CompExpr();
          jj_consume_token(RPAREN);
          jj_consume_token(THEN);
          Block();
        }
        switch ((jj_ntk==-1)?jj_ntk_f():jj_ntk) {
        case ELSE:{
          jj_consume_token(ELSE);
          Block();
          break;
          }
        default:
          jj_la1[10] = jj_gen;
          ;
        }
        jj_consume_token(ENDIF);
      } catch (Throwable jjte000) {
if (jjtc000) {
            jjtree.clearNodeScope(jjtn000);
            jjtc000 = false;
          } else {
            jjtree.popNode();
          }
          if (jjte000 instanceof RuntimeException) {
            {if (true) throw (RuntimeException)jjte000;}
          }
          if (jjte000 instanceof ParseException) {
            {if (true) throw (ParseException)jjte000;}
          }
          {if (true) throw (Error)jjte000;}
      } finally {
if (jjtc000) {
            jjtree.closeNodeScope(jjtn000, true);
          }
      }
    } finally {
      trace_return("IfStmt");
    }
  }

  final public void WhileStmt() throws ParseException {
    trace_call("WhileStmt");
    try {/*@bgen(jjtree) WhileStmt */
  ASTWhileStmt jjtn000 = new ASTWhileStmt(JJTWHILESTMT);
  boolean jjtc000 = true;
  jjtree.openNodeScope(jjtn000);
      try {
        jj_consume_token(WHILE);
        CompExpr();
        WhileBlock();
        jj_consume_token(ENDWHILE);
      } catch (Throwable jjte000) {
if (jjtc000) {
            jjtree.clearNodeScope(jjtn000);
            jjtc000 = false;
          } else {
            jjtree.popNode();
          }
          if (jjte000 instanceof RuntimeException) {
            {if (true) throw (RuntimeException)jjte000;}
          }
          if (jjte000 instanceof ParseException) {
            {if (true) throw (ParseException)jjte000;}
          }
          {if (true) throw (Error)jjte000;}
      } finally {
if (jjtc000) {
            jjtree.closeNodeScope(jjtn000, true);
          }
      }
    } finally {
      trace_return("WhileStmt");
    }
  }

  final public void SelectStmt() throws ParseException {
    trace_call("SelectStmt");
    try {/*@bgen(jjtree) SelectStmt */
  ASTSelectStmt jjtn000 = new ASTSelectStmt(JJTSELECTSTMT);
  boolean jjtc000 = true;
  jjtree.openNodeScope(jjtn000);
      try {
        jj_consume_token(SELECT);
        CompExpr();
        label_8:
        while (true) {
          jj_consume_token(CASE);
          CompExpr();
          jj_consume_token(COLON);
          Block();
          switch ((jj_ntk==-1)?jj_ntk_f():jj_ntk) {
          case CASE:{
            ;
            break;
            }
          default:
            jj_la1[11] = jj_gen;
            break label_8;
          }
        }
        switch ((jj_ntk==-1)?jj_ntk_f():jj_ntk) {
        case CASEELSE:{
          jj_consume_token(CASEELSE);
          jj_consume_token(COLON);
          Block();
          break;
          }
        default:
          jj_la1[12] = jj_gen;
          ;
        }
        jj_consume_token(ENDSELECT);
      } catch (Throwable jjte000) {
if (jjtc000) {
            jjtree.clearNodeScope(jjtn000);
            jjtc000 = false;
          } else {
            jjtree.popNode();
          }
          if (jjte000 instanceof RuntimeException) {
            {if (true) throw (RuntimeException)jjte000;}
          }
          if (jjte000 instanceof ParseException) {
            {if (true) throw (ParseException)jjte000;}
          }
          {if (true) throw (Error)jjte000;}
      } finally {
if (jjtc000) {
            jjtree.closeNodeScope(jjtn000, true);
          }
      }
    } finally {
      trace_return("SelectStmt");
    }
  }

  final public void DimStmt() throws ParseException {
    trace_call("DimStmt");
    try {/*@bgen(jjtree) DimStmt */
  ASTDimStmt jjtn000 = new ASTDimStmt(JJTDIMSTMT);
  boolean jjtc000 = true;
  jjtree.openNodeScope(jjtn000);Token t;
      try {
        jj_consume_token(DIM);
        Identifier();
        switch ((jj_ntk==-1)?jj_ntk_f():jj_ntk) {
        case LBRACKET:{
          Subscript();
          break;
          }
        default:
          jj_la1[13] = jj_gen;
          ;
        }
        jj_consume_token(AS);
        t = jj_consume_token(TYPE);
jjtree.closeNodeScope(jjtn000, true);
                                                            jjtc000 = false;
jjtn000.nodeValue = t.image;
      } catch (Throwable jjte000) {
if (jjtc000) {
            jjtree.clearNodeScope(jjtn000);
            jjtc000 = false;
          } else {
            jjtree.popNode();
          }
          if (jjte000 instanceof RuntimeException) {
            {if (true) throw (RuntimeException)jjte000;}
          }
          if (jjte000 instanceof ParseException) {
            {if (true) throw (ParseException)jjte000;}
          }
          {if (true) throw (Error)jjte000;}
      } finally {
if (jjtc000) {
            jjtree.closeNodeScope(jjtn000, true);
          }
      }
    } finally {
      trace_return("DimStmt");
    }
  }

  final public void BreakStmt() throws ParseException {
    trace_call("BreakStmt");
    try {/*@bgen(jjtree) BreakStmt */
  ASTBreakStmt jjtn000 = new ASTBreakStmt(JJTBREAKSTMT);
  boolean jjtc000 = true;
  jjtree.openNodeScope(jjtn000);
      try {
        jj_consume_token(BREAK);
      } finally {
if (jjtc000) {
            jjtree.closeNodeScope(jjtn000, true);
          }
      }
    } finally {
      trace_return("BreakStmt");
    }
  }

  final public void ContinueStmt() throws ParseException {
    trace_call("ContinueStmt");
    try {/*@bgen(jjtree) ContinueStmt */
  ASTContinueStmt jjtn000 = new ASTContinueStmt(JJTCONTINUESTMT);
  boolean jjtc000 = true;
  jjtree.openNodeScope(jjtn000);
      try {
        jj_consume_token(CONTINUE);
      } finally {
if (jjtc000) {
            jjtree.closeNodeScope(jjtn000, true);
          }
      }
    } finally {
      trace_return("ContinueStmt");
    }
  }

  final public void PrintStmt() throws ParseException {
    trace_call("PrintStmt");
    try {/*@bgen(jjtree) PrintStmt */
  ASTPrintStmt jjtn000 = new ASTPrintStmt(JJTPRINTSTMT);
  boolean jjtc000 = true;
  jjtree.openNodeScope(jjtn000);
      try {
        jj_consume_token(PRINT);
        CompExpr();
      } catch (Throwable jjte000) {
if (jjtc000) {
            jjtree.clearNodeScope(jjtn000);
            jjtc000 = false;
          } else {
            jjtree.popNode();
          }
          if (jjte000 instanceof RuntimeException) {
            {if (true) throw (RuntimeException)jjte000;}
          }
          if (jjte000 instanceof ParseException) {
            {if (true) throw (ParseException)jjte000;}
          }
          {if (true) throw (Error)jjte000;}
      } finally {
if (jjtc000) {
            jjtree.closeNodeScope(jjtn000, true);
          }
      }
    } finally {
      trace_return("PrintStmt");
    }
  }

  final public void ReturnStmt() throws ParseException {
    trace_call("ReturnStmt");
    try {/*@bgen(jjtree) ReturnStmt */
  ASTReturnStmt jjtn000 = new ASTReturnStmt(JJTRETURNSTMT);
  boolean jjtc000 = true;
  jjtree.openNodeScope(jjtn000);
      try {
        jj_consume_token(RETURN);
        CompExpr();
      } catch (Throwable jjte000) {
if (jjtc000) {
            jjtree.clearNodeScope(jjtn000);
            jjtc000 = false;
          } else {
            jjtree.popNode();
          }
          if (jjte000 instanceof RuntimeException) {
            {if (true) throw (RuntimeException)jjte000;}
          }
          if (jjte000 instanceof ParseException) {
            {if (true) throw (ParseException)jjte000;}
          }
          {if (true) throw (Error)jjte000;}
      } finally {
if (jjtc000) {
            jjtree.closeNodeScope(jjtn000, true);
          }
      }
    } finally {
      trace_return("ReturnStmt");
    }
  }

//void VarArray():
//{}
//{
//	t = <IDENTIFIER> {jjtThis.nodeValue = t.image}
//	<LPAREN> ExpressionList() <RpAREN> 
//}
  final public 
void ExpressionList() throws ParseException {
    trace_call("ExpressionList");
    try {
      Expression();
      label_9:
      while (true) {
        switch ((jj_ntk==-1)?jj_ntk_f():jj_ntk) {
        case COMMA:{
          ;
          break;
          }
        default:
          jj_la1[14] = jj_gen;
          break label_9;
        }
        jj_consume_token(COMMA);
        Expression();
      }
    } finally {
      trace_return("ExpressionList");
    }
  }

  final public void Expression() throws ParseException {
    trace_call("Expression");
    try {
      AssignExpr();
    } finally {
      trace_return("Expression");
    }
  }
